# headcrab

./: Cargo.toml
examples/: repl.rs
headcrab_inject/: Cargo.toml
headcrab_inject/src/: lib.rs  module.rs  old_module.rs  worker_thread.rs
headcrab_inject/tests/: inject_abort.rs
src/: symbol.rs
src/symbol/: mod.rs  source.rs
tests/: disassemble.rs  fixed_breakpoint.rs  readmem.rs  readregs.rs  runtime_breakpoint.rs  source.rs
tests/testees/: .gitignore  Makefile  known_asm.S
